commented for ngx-slick

--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,3 +1,7 @@
+<!-- TODO -->
+<!--
+  implement https://www.npmjs.com/package/ngx-slick
+-->
 <!-- Slide1 -->
 <section class="slide1">
   <div class="wrap-slick1">
