added owl carousel

--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,5 +1,15 @@
 <!-- Slide1 -->
-
+<div id="owl-slider">
+    <!-- You can use owl-carousel selector to include its component -->
+    <owl-carousel [options]="carouselOptions" [items]="images" [carouselClasses]="['owl-theme', 'row', 'sliding']">
+      <div class="item" *ngFor="let image of images;let i = index">
+        <div class="coupons-div" style="cursor:pointer;">
+          <img class="deals-image" src="{{image}}" />
+          <br/>
+        </div>
+      </div>
+    </owl-carousel>
+  </div>
 <!-- Banner -->
 <section class="banner bgwhite p-t-40 p-b-40">
   <div class="container">
