--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -115,281 +115,16 @@
     </div>
 
     <!-- Slide2 -->
-    <div class="wrap-slick2">
-      <div class="slick2">
-
-        <div class="item-slick2 p-l-15 p-r-15">
-          <!-- Block2 -->
-          <div class="block2">
-            <div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelnew">
-              <img src="assets/images/item-02.jpg" alt="IMG-PRODUCT">
-
-              <div class="block2-overlay trans-0-4">
-                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
-                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-                </a>
-
-                <div class="block2-btn-addcart w-size1 trans-0-4">
-                  <!-- Button -->
-                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                    Add to Cart
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <div class="block2-txt p-t-20">
-              <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-                Herschel supply co 25l
-              </a>
-
-              <span class="block2-price m-text6 p-r-5">
-                $75.00
-              </span>
-            </div>
+    <div id="owl-slider-tile">
+      <!-- You can use owl-carousel selector to include its component -->
+      <owl-carousel [options]="tileCarouselOptions" [items]="tileImages" [carouselClasses]="['owl-theme', 'row', 'sliding']">
+        <div class="item" *ngFor="let image of tileImages;let i = index">
+          <div class="coupons-div" style="cursor:pointer;">
+            <img class="deals-image" src="{{image}}" />
+            <br/>
           </div>
         </div>
-
-        <div class="item-slick2 p-l-15 p-r-15">
-          <!-- Block2 -->
-          <div class="block2">
-            <div class="block2-img wrap-pic-w of-hidden pos-relative">
-              <img src="assets/images/item-03.jpg" alt="IMG-PRODUCT">
-
-              <div class="block2-overlay trans-0-4">
-                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
-                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-                </a>
-
-                <div class="block2-btn-addcart w-size1 trans-0-4">
-                  <!-- Button -->
-                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                    Add to Cart
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <div class="block2-txt p-t-20">
-              <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-                Denim jacket blue
-              </a>
-
-              <span class="block2-price m-text6 p-r-5">
-                $92.50
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="item-slick2 p-l-15 p-r-15">
-          <!-- Block2 -->
-          <div class="block2">
-            <div class="block2-img wrap-pic-w of-hidden pos-relative">
-              <img src="assets/images/item-05.jpg" alt="IMG-PRODUCT">
-
-              <div class="block2-overlay trans-0-4">
-                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
-                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-                </a>
-
-                <div class="block2-btn-addcart w-size1 trans-0-4">
-                  <!-- Button -->
-                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                    Add to Cart
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <div class="block2-txt p-t-20">
-              <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-                Coach slim easton black
-              </a>
-
-              <span class="block2-price m-text6 p-r-5">
-                $165.90
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="item-slick2 p-l-15 p-r-15">
-          <!-- Block2 -->
-          <div class="block2">
-            <div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelsale">
-              <img src="assets/images/item-07.jpg" alt="IMG-PRODUCT">
-
-              <div class="block2-overlay trans-0-4">
-                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
-                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-                </a>
-
-                <div class="block2-btn-addcart w-size1 trans-0-4">
-                  <!-- Button -->
-                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                    Add to Cart
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <div class="block2-txt p-t-20">
-              <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-                Frayed denim shorts
-              </a>
-
-              <span class="block2-oldprice m-text7 p-r-5">
-                $29.50
-              </span>
-
-              <span class="block2-newprice m-text8 p-r-5">
-                $15.90
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="item-slick2 p-l-15 p-r-15">
-          <!-- Block2 -->
-          <div class="block2">
-            <div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelnew">
-              <img src="assets/images/item-02.jpg" alt="IMG-PRODUCT">
-
-              <div class="block2-overlay trans-0-4">
-                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
-                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-                </a>
-
-                <div class="block2-btn-addcart w-size1 trans-0-4">
-                  <!-- Button -->
-                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                    Add to Cart
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <div class="block2-txt p-t-20">
-              <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-                Herschel supply co 25l
-              </a>
-
-              <span class="block2-price m-text6 p-r-5">
-                $75.00
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="item-slick2 p-l-15 p-r-15">
-          <!-- Block2 -->
-          <div class="block2">
-            <div class="block2-img wrap-pic-w of-hidden pos-relative">
-              <img src="assets/images/item-03.jpg" alt="IMG-PRODUCT">
-
-              <div class="block2-overlay trans-0-4">
-                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
-                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-                </a>
-
-                <div class="block2-btn-addcart w-size1 trans-0-4">
-                  <!-- Button -->
-                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                    Add to Cart
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <div class="block2-txt p-t-20">
-              <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-                Denim jacket blue
-              </a>
-
-              <span class="block2-price m-text6 p-r-5">
-                $92.50
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="item-slick2 p-l-15 p-r-15">
-          <!-- Block2 -->
-          <div class="block2">
-            <div class="block2-img wrap-pic-w of-hidden pos-relative">
-              <img src="assets/images/item-05.jpg" alt="IMG-PRODUCT">
-
-              <div class="block2-overlay trans-0-4">
-                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
-                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-                </a>
-
-                <div class="block2-btn-addcart w-size1 trans-0-4">
-                  <!-- Button -->
-                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                    Add to Cart
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <div class="block2-txt p-t-20">
-              <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-                Coach slim easton black
-              </a>
-
-              <span class="block2-price m-text6 p-r-5">
-                $165.90
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="item-slick2 p-l-15 p-r-15">
-          <!-- Block2 -->
-          <div class="block2">
-            <div class="block2-img wrap-pic-w of-hidden pos-relative block2-labelsale">
-              <img src="assets/images/item-07.jpg" alt="IMG-PRODUCT">
-
-              <div class="block2-overlay trans-0-4">
-                <a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
-                  <i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-                  <i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-                </a>
-
-                <div class="block2-btn-addcart w-size1 trans-0-4">
-                  <!-- Button -->
-                  <button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-                    Add to Cart
-                  </button>
-                </div>
-              </div>
-            </div>
-
-            <div class="block2-txt p-t-20">
-              <a href="product-detail.html" class="block2-name dis-block s-text3 p-b-5">
-                Frayed denim shorts
-              </a>
-
-              <span class="block2-oldprice m-text7 p-r-5">
-                $29.50
-              </span>
-
-              <span class="block2-newprice m-text8 p-r-5">
-                $15.90
-              </span>
-            </div>
-          </div>
-        </div>
-      </div>
+      </owl-carousel>
     </div>
 
   </div>
@@ -479,100 +214,6 @@
                 </span>
               </div>
             </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<!-- Blog -->
-<section class="blog bgwhite p-t-94 p-b-65">
-  <div class="container">
-    <div class="sec-title p-b-52">
-      <h3 class="m-text5 t-center">
-        Our Blog
-      </h3>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-10 col-md-4 p-b-30 m-l-r-auto">
-        <!-- Block3 -->
-        <div class="block3">
-          <a href="blog-detail.html" class="block3-img dis-block hov-img-zoom">
-            <img src="assets/images/blog-01.jpg" alt="IMG-BLOG">
-          </a>
-
-          <div class="block3-txt p-t-14">
-            <h4 class="p-b-7">
-              <a href="blog-detail.html" class="m-text11">
-                Black Friday Guide: Best Sales & Discount Codes
-              </a>
-            </h4>
-
-            <span class="s-text6">By</span>
-            <span class="s-text7">Nancy Ward</span>
-            <span class="s-text6">on</span>
-            <span class="s-text7">July 22, 2017</span>
-
-            <p class="s-text8 p-t-16">
-              Duis ut velit gravida nibh bibendum commodo. Sus-pendisse pellentesque mattis augue id euismod. Inter-dum et malesuada fames
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-10 col-md-4 p-b-30 m-l-r-auto">
-        <!-- Block3 -->
-        <div class="block3">
-          <a href="blog-detail.html" class="block3-img dis-block hov-img-zoom">
-            <img src="assets/images/blog-02.jpg" alt="IMG-BLOG">
-          </a>
-
-          <div class="block3-txt p-t-14">
-            <h4 class="p-b-7">
-              <a href="blog-detail.html" class="m-text11">
-                The White Sneakers Nearly Every Fashion Girls Own
-              </a>
-            </h4>
-
-            <span class="s-text6">By</span>
-            <span class="s-text7">Nancy Ward</span>
-            <span class="s-text6">on</span>
-            <span class="s-text7">July 18, 2017</span>
-
-            <p class="s-text8 p-t-16">
-              Nullam scelerisque, lacus sed consequat laoreet, dui enim iaculis leo, eu viverra ex nulla in tellus. Nullam nec ornare tellus,
-              ac fringilla lacus. Ut sit ame
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-sm-10 col-md-4 p-b-30 m-l-r-auto">
-        <!-- Block3 -->
-        <div class="block3">
-          <a href="blog-detail.html" class="block3-img dis-block hov-img-zoom">
-            <img src="assets/images/blog-03.jpg" alt="IMG-BLOG">
-          </a>
-
-          <div class="block3-txt p-t-14">
-            <h4 class="p-b-7">
-              <a href="blog-detail.html" class="m-text11">
-                New York SS 2018 Street Style: Annina Mislin
-              </a>
-            </h4>
-
-            <span class="s-text6">By</span>
-            <span class="s-text7">Nancy Ward</span>
-            <span class="s-text6">on</span>
-            <span class="s-text7">July 2, 2017</span>
-
-            <p class="s-text8 p-t-16">
-              Proin nec vehicula lorem, a efficitur ex. Nam vehicula nulla vel erat tincidunt, sed hendrerit ligula porttitor. Fusce sit
-              amet maximus nunc
-            </p>
           </div>
         </div>
       </div>
