--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
-@import './util.css';
+@import './assets/component-styles/util.css';
+@import './assets/component-styles/login.css';
 
 /*------------------------------------------------------------------
 Project:  
