--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -1,14 +1,14 @@
 <div class="login-container">
 
-  <h3>Please Log In, or
+  <h3>Log In to Nelly Bee, or
     <a href="#">Sign Up</a>
   </h3>
   <div class="row">
     <div class="col-xs-6 col-sm-6 col-md-6">
-      <a href="#" class="btn btn-lg btn-primary btn-block">Facebook</a>
+      <button class="btn btn-lg btn-primary btn-block" (click)="socialSignIn('facebook')">Facebook</button>
     </div>
     <div class="col-xs-6 col-sm-6 col-md-6">
-      <a href="#" class="btn btn-lg btn-info btn-block">Google</a>
+      <button class="btn btn-lg btn-info btn-block" (click)="socialSignIn('google')">Google</button>
     </div>
   </div>
   <div class="login-or">
@@ -30,9 +30,9 @@
       <label>
         <input type="checkbox"> Remember me </label>
     </div>
-    <button type="submit" class="btn btn btn-primary">
+    <button type="submit" class="btn btn btn-primary login-btn" (click)="localLogin()">
+        <button class="btn btn btn-primary login-btn" (click)="sendVerificationEmail()">
       Log In
     </button>
   </form>
-
 </div>
