--- a/web/src/assets/component-styles/login.css
+++ b/web/src/assets/component-styles/login.css
@@ -4,10 +4,18 @@
   }
 
   .login-container {
-  	margin: auto;
+  	margin: 10px auto 10px auto;
   	width: 50%;
   	border: 3px solid green;
   	padding: 10px;
+  	background: rgb(247, 247, 247);
+  	border: 1px solid rgba(147, 184, 189, 0.8);
+  	-webkit-box-shadow: 0pt 2px 5px rgba(105, 108, 109, 0.7), 0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+  	-moz-box-shadow: 0pt 2px 5px rgba(105, 108, 109, 0.7), 0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+  	box-shadow: 0pt 2px 5px rgba(105, 108, 109, 0.7), 0px 0px 8px 5px rgba(208, 223, 226, 0.4) inset;
+  	-webkit-box-shadow: 5px;
+  	-moz-border-radius: 5px;
+  	border-radius: 5px;
   }
 
   .login-or {
@@ -18,6 +26,10 @@
   	margin-bottom: 10px;
   	padding-top: 10px;
   	padding-bottom: 10px;
+  }
+
+  .login-btn{
+	  width: 100%;
   }
 
   .span-or {
