completed verification email

--- a/web/src/app/user-verification/user-verification.component.html
+++ b/web/src/app/user-verification/user-verification.component.html
@@ -2,7 +2,7 @@
 <form role="form">
   <div class="form-group">
     <label for="inputUsernameEmail">Pin Number</label>
-    <input type="text" class="form-control" id="inputUsernameEmail">
+    <input type="text" class="form-control" id="inputUsernameEmail" value="{{pin}}">
   </div>
   <button type="submit" class="btn btn btn-primary login-btn" (click)="verifyNewUser()">
     Confirm
